--- a/debian/control
+++ b/debian/control
@@ -7,20 +7,39 @@ Uploaders: Aurélien COUDERC <coucouf@debian.org>,
 Build-Depends: cmake (>= 3.16~),
                debhelper-compat (= 13),
                doxygen,
-               extra-cmake-modules (>= 5.90.0~),
+               extra-cmake-modules (>= 5.103.0~),
                libbz2-dev,
                liblzma-dev,
                libqt5sql5-sqlite:native,
+               libzstd-dev,
+               pkg-config,
                pkg-kde-tools (>= 0.15.16~),
                qtbase5-dev (>= 5.15.2~),
                qttools5-dev,
                qttools5-dev-tools (>= 5.4),
                zlib1g-dev,
-Standards-Version: 4.6.0
+Standards-Version: 4.6.2
 Homepage: https://invent.kde.org/frameworks/karchive
 Vcs-Browser: https://salsa.debian.org/qt-kde-team/kde/karchive
 Vcs-Git: https://salsa.debian.org/qt-kde-team/kde/karchive.git
 Rules-Requires-Root: no
+
+Package: libkf5archive-data
+Architecture: all
+Multi-Arch: foreign
+Depends: ${misc:Depends}, ${shlibs:Depends},
+Description: data files for karchive
+ Karchive is a Qt 5 addon providing access to numerous types of archives.
+ .
+ KArchive provides classes for easy reading, creation and manipulation of
+ "archive" formats like ZIP and TAR.
+ .
+ It also provides transparent compression and decompression of data, like the
+ GZip format, via a subclass of QIODevice.
+ .
+ This package is part of KDE Frameworks 5.
+ .
+ This package contains the data files.
 
 Package: libkf5archive-dev
 Section: libdevel
@@ -28,7 +47,7 @@ Architecture: any
 Depends: libkf5archive5 (= ${binary:Version}),
          qtbase5-dev (>= 5.15.2~),
          ${misc:Depends},
-Recommends: libkf5archive-doc (= ${source:Version})
+Recommends: libkf5archive-doc (= ${source:Version}),
 Description: development files for karchive
  Karchive is a Qt 5 addon providing access to numerous types of archives.
  .
@@ -50,7 +69,7 @@ Breaks: kdoctools-dev (<< 5.28),
 Package: libkf5archive-doc
 Architecture: all
 Multi-Arch: foreign
-Depends: ${misc:Depends}
+Depends: ${misc:Depends},
 Description: Qt 5 addon providing access to numerous types of archives (documentation)
  KArchive provides classes for easy reading, creation and manipulation of
  "archive" formats like ZIP and TAR.
@@ -66,7 +85,9 @@ Section: doc
 Package: libkf5archive5
 Architecture: any
 Multi-Arch: same
-Depends: ${misc:Depends}, ${shlibs:Depends}
+Depends: libkf5archive-data (= ${source:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends},
 Description: Qt 5 addon providing access to numerous types of archives
  KArchive provides classes for easy reading, creation and manipulation of
  "archive" formats like ZIP and TAR.
